Adding images for trial

--- a/manuscript/page-8/body.html
+++ b/manuscript/page-8/body.html
@@ -1,6 +1,6 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Emergency Vehicles </h1>
+    <h1> Pass/Yield/Stop/Change Lanes/Turns </h1>
     <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
   </div>
 </div>
