--- a/manuscript/page-3/body.html
+++ b/manuscript/page-3/body.html
@@ -1,6 +1,7 @@
 <div class="leaf flex">
   <div class="inner justify ">
     <h1> Preface </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+    <img src="/traffic_signals/traffic_light.gif" alt="Traffic Light" style="width:200px;height:250px;">
+    <img src="/traffic_signals/reserved_parking.png" alt="Traffic Light" style="width:200px;height:250px;">
   </div>
 </div>
