Adding first cut of cover on the book

--- a/manuscript/page-19/body.html
+++ b/manuscript/page-19/body.html
@@ -1,9 +1,11 @@
 <div class="leaf flex">
   <div class="inner justify ">
+    <h1> Signs/Symbols </h1>
+    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
     <h1> Traffic Signals </h1>
-    <img src="/assets/images/red_light_stop.jpg" alt="Red Light Stop" style="width:128px;height:128px;">
     <h3> Red Light </h3>
     <p> Come to a complete stop. </p>
+    <img src="/traffic_signals/red_light_stop.gif" alt="Red Light Stop" style="width:128px;height:128px;">
     <h3> Right Arrow </h3>
     <p> Come to a complete stop. </p>
     <h3> Right turn on Red Light </h3>
