--- a/manuscript/page-3/body.html
+++ b/manuscript/page-3/body.html
@@ -1,7 +1,6 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Preface </h1>
-    <img src="/assets/images/traffic_light.gif" alt="Traffic Light" style="width:200px;height:250px;">
-    <img src="/assets/images/reserved_parking.png" alt="Traffic Light" style="width:200px;height:250px;">
+    <h1> Hello world! </h1>
+    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
   </div>
 </div>
