--- a/manuscript/page-10/body.html
+++ b/manuscript/page-10/body.html
@@ -1,17 +1,6 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Traffic Signals </h1>
-    <img src="/traffic_signals/red_light_stop.jpg" alt="Red Light Stop" style="width:128px;height:128px;">
-    <h3> Red Light </h3>
-    <p> Come to a complete stop. </p>
-    <h3> Right Arrow </h3>
-    <p> Come to a complete stop. </p>
-    <h3> Right turn on Red Light </h3>
-    <p> Come to a complete stop. Look both ways and yield the right-of-way to pedestrians and other traffic. </p>
-    <h3> Left turn on Red Light </h3>
-    <p> No left turn on red light unless you are on a on-way street and you are turning left onto another one-way street. </p>
-    <h3> Right turn on Red Light </h3>
-    <p> Come to a complete stop. Look both ways and yield the right-of-way to pedestrians and other traffic. </p>
-
+    <h1> Instructions </h1>
+    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
   </div>
 </div>
