--- a/manuscript/page-4/body.html
+++ b/manuscript/page-4/body.html
@@ -1,17 +1,15 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Traffic Signals </h1>
-    <img src="/assets/images/red_light_stop.jpg" alt="Red Light Stop" style="width:128px;height:128px;">
-    <h3> Red Light </h3>
-    <p> Come to a complete stop. </p>
-    <h3> Right Arrow </h3>
-    <p> Come to a complete stop. </p>
-    <h3> Right turn on Red Light </h3>
-    <p> Come to a complete stop. Look both ways and yield the right-of-way to pedestrians and other traffic. </p>
-    <h3> Left turn on Red Light </h3>
-    <p> No left turn on red light unless you are on a on-way street and you are turning left onto another one-way street. </p>
-    <h3> Right turn on Red Light </h3>
-    <p> Come to a complete stop. Look both ways and yield the right-of-way to pedestrians and other traffic. </p>
-
+    <h1>Newpost York</h1>
+    <div class="subhead">York, MA - Thursday August 30, 1978 - Seven Pages</div>
+    <div class="head"> <span class="headline hl3">When lights overshadow the dark</span>
+      <p><span class="headline hl4">by JOHANN WOLFGANG VON GOETHE</span></p>
+    </div>
+    <p> When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass
+      by the trickling stream; </p>
+    <p> I feel a presence.</p>
+    <p> Of the Almighty?, who formed us in his own image, and the breath of that universal love which bears and sustains us, as it floats around us in an eternity of bliss; and then, my friend, when darkness overspreads my eyes, and heaven and earth seem
+      to dwell in my soul and absorb its power, like the form of a beloved mistress, then I often think with longing, Oh, would I could describe these conceptions, could impress upon paper all that is living so full and warm within me, that it might be
+      the mirror of my soul, as my soul is the mirror of the infinite God! </p>
   </div>
 </div>
