--- a/manuscript/page-1/body.html
+++ b/manuscript/page-1/body.html
@@ -12,7 +12,7 @@
   <div class="subhead">Don't cycle around forever!</div>
 
 <div class="container">
-  <svg id="bike" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" width="100%" height="500px" viewBox="0 0 750 500" style="enable-background:new 0 0 750 500;" xml:space="preserve">
+  <svg id="bike" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0" y="0" width="100%" height="100%" viewBox="0 0 750 500" style="enable-background:new 0 0 750 500;" xml:space="preserve">
     <rect id="city" class="bg" width="750" height="500" x="0" y="0" />
     <g id="wheel">
       <path class="st0" id="anima_wheel_1" d="M234,222.25c-46.53,0-84.25,37.72-84.25,84.25s37.72,84.25,84.25,84.25s84.25-37.72,84.25-84.25
