Traffic Signals Page Update-1

--- a/manuscript/page-11/body.html
+++ b/manuscript/page-11/body.html
@@ -1,7 +1,7 @@
 <div class="leaf flex">
   <div class="inner justify ">
     <h1> Preface </h1>
-    <img src="/assets/images/traffic_light.gif" alt="Traffic Light" style="width:200px;height:250px;">
-    <img src="/assets/images/reserved_parking.png" alt="Traffic Light" style="width:200px;height:250px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/traffic_light.gif" alt="Traffic Light" style="width:200px;height:250px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/reserved_parking.png" alt="Traffic Light" style="width:200px;height:250px;">
   </div>
 </div>
