--- a/manuscript/page-12/body.html
+++ b/manuscript/page-12/body.html
@@ -1,17 +1,20 @@
 <div class="leaf flex">
   <div class="inner justify ">
     <h1> Traffic Signals </h1>
-    <img src="/assets/images/red_light_stop.jpg" alt="Red Light Stop" style="width:128px;height:128px;">
-    <h3> Red Light </h3>
-    <p> Come to a complete stop. </p>
-    <h3> Right Arrow </h3>
-    <p> Come to a complete stop. </p>
-    <h3> Right turn on Red Light </h3>
-    <p> Come to a complete stop. Look both ways and yield the right-of-way to pedestrians and other traffic. </p>
-    <h3> Left turn on Red Light </h3>
-    <p> No left turn on red light unless you are on a on-way street and you are turning left onto another one-way street. </p>
-    <h3> Right turn on Red Light </h3>
-    <p> Come to a complete stop. Look both ways and yield the right-of-way to pedestrians and other traffic. </p>
-
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_light_stop.jpg" alt="Red Light Stop" style="width:128px;height:128px;">
+    <p> Traffic signals, signs and pavement markings are used for traffic control to provide a smooth, orderly flow of traffic. It is
+important to understand and obey them. It is illegal to avoid these traffic controls by cutting through a parking lot or field. </p>
+    <p> Obey all signs and signals unless directed by a police officer;
+always follow the officer’s direction. </p>
+    <h3> Traffic Signals </h3>
+    <p> Traffic signals apply to drivers, motorcycle riders, bicyclists,
+moped-riders and pedestrians.</p>
+    <h4> Red Light: </h4>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_light_on.jpg" alt="Red Light On" style="width:100px;height:100px;">
+    <p> At a red light, come to a complete stop
+at the stop line or, if there is no stop line, before
+entering the intersection or before reaching the
+crosswalk. Remain stopped as long as the signal is
+red, unless turns are allowed.</p>
   </div>
 </div>
