--- a/manuscript/page-14/body.html
+++ b/manuscript/page-14/body.html
@@ -1,6 +1,26 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Hello world! </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+    <p> <b> Red arrow: </b> <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_arrow_on.jpg" alt="Red Arrow On" style="width:100px;height:100px;">
+      A red arrow means you must stop if you intend to
+move in the direction of the arrow. You may not
+proceed in the direction of the arrow as long
+as the red arrow is displayed, unless signs are
+posted at the intersection that read “Right on
+Red Arrow After Stop” or “Left on Red Arrow
+After Stop.” Virginia law prohibits right and left
+turns at red arrow lights.
+    <br> Note: If you are traveling in another state, make sure you know
+its laws for right and left turns at red and red arrow lights. </p>
+    <p> <b> Flashing red light: </b> <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_light_flashing.jpg" alt="Red Light Flashing" style="width:100px;height:100px;">
+      At a flashing red light, come
+to a complete stop and yield to oncoming
+vehicles and pedestrians. You may go when the
+way is clear. At a railroad crossing, you must
+come to a complete stop even if you don’t see a
+train. </p>
+    <p> <b>Flashing red arrow: </b> At a flashing red arrow, come to a
+    complete stop, yield the right-of-way to vehicles coming from
+    the other direction and pedestrians in the intersection, and
+    proceed in the direction of the arrow when the way is clear.</p>
   </div>
 </div>
