--- a/manuscript/page-13/body.html
+++ b/manuscript/page-13/body.html
@@ -1,19 +1,23 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Signs/Symbols </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
-    <h1> Traffic Signals </h1>
-    <h3> Red Light </h3>
-    <p> Come to a complete stop. </p>
-    <img src="/assets/images/red_light_stop.gif" alt="Red Light Stop" style="width:128px;height:128px;">
-    <h3> Right Arrow </h3>
-    <p> Come to a complete stop. </p>
-    <h3> Right turn on Red Light </h3>
-    <p> Come to a complete stop. Look both ways and yield the right-of-way to pedestrians and other traffic. </p>
-    <h3> Left turn on Red Light </h3>
-    <p> No left turn on red light unless you are on a on-way street and you are turning left onto another one-way street. </p>
-    <h3> Right turn on Red Light </h3>
-    <p> Come to a complete stop. Look both ways and yield the right-of-way to pedestrians and other traffic. </p>
-
+    <h4> Right turn on red: </h4>
+    <p> You may turn right while the traffic signal
+displays a red light. Before turning, you must come to a
+complete stop. Look both ways and yield the right-of-way to
+pedestrians and other traffic. Be sure to check for less visible
+vehicles such as motorcycles, bicycles and mopeds. <b>You may
+not turn</b> right on red if signs are posted at the intersection that
+read “No Turn on Red,” or if a red arrow pointing to the right is
+displayed. </p>
+    <h4> Left turn on red: </h4>
+    <p> You may turn left at a red light if you are on
+a one-way street and turning left onto another one-way street
+while the traffic signal displays a red light. Before turning, you
+must come to a complete stop. Look both ways and yield the
+right-of-way to pedestrians and other traffic. Be sure to check
+for less visible vehicles such as motorcycles, bicycles, and
+mopeds. <b> You may not turn left </b> on red if signs are posted at
+the intersection that read “No Turn on Red,” or if a red arrow
+pointing to the left is displayed. </p>
   </div>
 </div>
