--- a/manuscript/page-13/body.html
+++ b/manuscript/page-13/body.html
@@ -1,7 +1,7 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h4> Right turn on red: </h4>
-    <p> You may turn right while the traffic signal
+    <p> <b> Right turn on red: </b>
+    You may turn right while the traffic signal
 displays a red light. Before turning, you must come to a
 complete stop. Look both ways and yield the right-of-way to
 pedestrians and other traffic. Be sure to check for less visible
@@ -9,8 +9,8 @@ vehicles such as motorcycles, bicycles and mopeds. <b>You may
 not turn</b> right on red if signs are posted at the intersection that
 read “No Turn on Red,” or if a red arrow pointing to the right is
 displayed. </p>
-    <h4> Left turn on red: </h4>
-    <p> You may turn left at a red light if you are on
+    <p><b> Left turn on red: </b>
+    You may turn left at a red light if you are on
 a one-way street and turning left onto another one-way street
 while the traffic signal displays a red light. Before turning, you
 must come to a complete stop. Look both ways and yield the
