--- a/manuscript/page-17/body.html
+++ b/manuscript/page-17/body.html
@@ -1,6 +1,25 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Hello world! </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+    <p> <h4> Lane use signals</h4>indicate lanes where you can and
+cannot drive during different hours of the day.</p>
+    <p><b>Red X:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_cross_on.jpg" alt="Red X" style="width:100px;height:100px;">
+      Never drive in a lane marked with
+a red X signal.</p>
+    <p><b>Yellow X or Yellow Diagonal Downward Arrow:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_cross_on.jpg" alt="Yellow X" style="width:100px;height:100px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_down_arrow.jpg" alt="Yellow Downward Arrow" style="width:100px;height:100px;">
+      These signals
+mean that you should move out
+of the lane as soon as safely
+possible.</p>
+    <p><b>Left-turn Arrow:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/one_way_arrow.jpg" alt="One Way Arrow" style="width:100px;height:100px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/two_way_arrow.jpg" alt="Two Way Arrow" style="width:100px;height:100px;">
+      You are permitted
+to enter in a lane marked with a
+one-way or two-way arrow only to
+turn in the direction of the arrow.</p>
+
   </div>
 </div>
