Traffic Signal Page Update-3

--- a/manuscript/page-19/body.html
+++ b/manuscript/page-19/body.html
@@ -1,19 +1,16 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Signs/Symbols </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
-    <h1> Traffic Signals </h1>
-    <h3> Red Light </h3>
-    <p> Come to a complete stop. </p>
-    <img src="/traffic_signals/red_light_stop.gif" alt="Red Light Stop" style="width:128px;height:128px;">
-    <h3> Right Arrow </h3>
-    <p> Come to a complete stop. </p>
-    <h3> Right turn on Red Light </h3>
-    <p> Come to a complete stop. Look both ways and yield the right-of-way to pedestrians and other traffic. </p>
-    <h3> Left turn on Red Light </h3>
-    <p> No left turn on red light unless you are on a on-way street and you are turning left onto another one-way street. </p>
-    <h3> Right turn on Red Light </h3>
-    <p> Come to a complete stop. Look both ways and yield the right-of-way to pedestrians and other traffic. </p>
 
+    <p>Green and white, blue and white, and brown and white signs
+are used to provide helpful information. The green sign is used
+to provide destination types of information, while the blue sign
+is used to inform regarding motorists services. The brown sign is
+used to advise of historical or cultural interests that might exist
+in the area.</p>
+    <p>Orange and black and pink and black signs are used to
+advise and warn in construction (orange) and incident (pink)
+areas. They are used with black and white signs that convey
+regulations that might exist only because of the construction
+effort or the incident.</p>
   </div>
 </div>
