--- a/manuscript/page-20/body.html
+++ b/manuscript/page-20/body.html
@@ -1,6 +1,40 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Pass/Yield/Stop/Change Lanes/Turns </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+
+    <p><h4>Sign Shapes</h4> </p>
+    <p><b>Octagon (Stop):</b> This eight-sided
+shape always means stop. You must
+come to a complete stop at the
+sign, stop line, pedestrian crosswalk
+or curb. Wait for any vehicle or
+pedestrian to clear the way. At some intersections you’ll find
+a sign beneath the stop sign that reads “All Way” or “4 Way.”
+At these intersections all vehicles on all roads leading into the
+intersection must stop. If you get to the intersection at the
+same time as other vehicles, the driver on the left must yield
+to the driver on the right.</p>
+    <p><b>Triangle (Yield):</b> You must
+slow down as you come to the
+intersection. Be prepared to stop.
+Let any vehicles, pedestrians or
+bicyclists safely pass before you
+proceed.</p>
+    <p><b>Rectangle (Regulatory or Guide):</b>
+      Vertical signs generally give
+  instructions or tell you the law.
+  Horizontal signs may give directions
+  or information.</p>
+    <p><b>Diamond (Warning):</b> These signs warn you
+of special conditions or hazards ahead. Slow
+down and drive with caution. Be ready to stop.</p>
+    <p><b>Pentagon (School Zone/School
+Crossing):</b>
+This five-sided shape marks
+school zones and warns you
+about school crossings. Signs
+may display horizontal lines
+indicating the point at which a
+crosswalk exists. Two signs may be used together
+to show the actual location of the crosswalk.</p>
   </div>
 </div>
