Traffic Signal Page Update-4

--- a/manuscript/page-20/body.html
+++ b/manuscript/page-20/body.html
@@ -3,7 +3,10 @@
 
     <p><h4>Sign Shapes</h4> </p>
     <p><b>Octagon (Stop):</b> This eight-sided
-shape always means stop. You must
+shape always means stop.
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/stop_sign.jpg" alt="Stop Sign" style="width:100px;height:100px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/octagon_sign.jpg" alt="Octagon Sign" style="width:100px;height:100px;">
+    You must
 come to a complete stop at the
 sign, stop line, pedestrian crosswalk
 or curb. Wait for any vehicle or
@@ -15,21 +18,29 @@ same time as other vehicles, the driver on the left must yield
 to the driver on the right.</p>
     <p><b>Triangle (Yield):</b> You must
 slow down as you come to the
-intersection. Be prepared to stop.
+intersection.
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yield_sign.jpg" alt="Yield Sign" style="width:100px;height:100px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/triangle_sign.jpg" alt="Triangle Sign" style="width:100px;height:100px;">
+    Be prepared to stop.
 Let any vehicles, pedestrians or
 bicyclists safely pass before you
 proceed.</p>
     <p><b>Rectangle (Regulatory or Guide):</b>
-      Vertical signs generally give
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/rectangle_sign_1.jpg" alt="Rectangle Sign 1" style="width:100px;height:100px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/rectangle_sign_2.jpg" alt="Rectangle Sign 2" style="width:100px;height:100px;">
+    Vertical signs generally give
   instructions or tell you the law.
   Horizontal signs may give directions
   or information.</p>
     <p><b>Diamond (Warning):</b> These signs warn you
-of special conditions or hazards ahead. Slow
-down and drive with caution. Be ready to stop.</p>
+of special conditions or hazards ahead.
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/warning_sign.jpg" alt="Warning Sign" style="width:100px;height:100px;">
+    Slow down and drive with caution. Be ready to stop.</p>
     <p><b>Pentagon (School Zone/School
 Crossing):</b>
-This five-sided shape marks
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/school_sign_1.jpg" alt="School Sign 1" style="width:100px;height:100px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/school_sign_2.jpg" alt="School Sign 2" style="width:100px;height:100px;">
+    This five-sided shape marks
 school zones and warns you
 about school crossings. Signs
 may display horizontal lines
