Traffic Signal Page Update-5

--- a/manuscript/page-10/body.html
+++ b/manuscript/page-10/body.html
@@ -1,6 +1,6 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Instructions </h1>
+    <h1> Hello world! It's waste page </h1>
     <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
   </div>
 </div>
