--- a/manuscript/page-17/body.html
+++ b/manuscript/page-17/body.html
@@ -1,25 +1,23 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p> <h4> Lane use signals</h4>indicate lanes where you can and
-cannot drive during different hours of the day.</p>
-    <p><b>Red X:</b>
-      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_cross_on.jpg" alt="Red X" style="width:100px;height:100px;">
-      Never drive in a lane marked with
-a red X signal.</p>
-    <p><b>Yellow X or Yellow Diagonal Downward Arrow:</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_cross_on.jpg" alt="Yellow X" style="width:100px;height:100px;">
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_down_arrow.jpg" alt="Yellow Downward Arrow" style="width:100px;height:100px;">
-      These signals
-mean that you should move out
-of the lane as soon as safely
-possible.</p>
-    <p><b>Left-turn Arrow:</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/one_way_arrow.jpg" alt="One Way Arrow" style="width:100px;height:100px;">
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/two_way_arrow.jpg" alt="Two Way Arrow" style="width:100px;height:100px;">
-      You are permitted
-to enter in a lane marked with a
-one-way or two-way arrow only to
-turn in the direction of the arrow.</p>
-
+    <p> <b> Right turn on red: </b>
+    You may turn right while the traffic signal
+displays a red light. Before turning, you must come to a
+complete stop. Look both ways and yield the right-of-way to
+pedestrians and other traffic. Be sure to check for less visible
+vehicles such as motorcycles, bicycles and mopeds. <b>You may
+not turn</b> right on red if signs are posted at the intersection that
+read “No Turn on Red,” or if a red arrow pointing to the right is
+displayed. </p>
+    <p><b> Left turn on red: </b>
+    You may turn left at a red light if you are on
+a one-way street and turning left onto another one-way street
+while the traffic signal displays a red light. Before turning, you
+must come to a complete stop. Look both ways and yield the
+right-of-way to pedestrians and other traffic. Be sure to check
+for less visible vehicles such as motorcycles, bicycles, and
+mopeds. <b> You may not turn left </b> on red if signs are posted at
+the intersection that read “No Turn on Red,” or if a red arrow
+pointing to the left is displayed. </p>
   </div>
 </div>
