--- a/manuscript/page-18/body.html
+++ b/manuscript/page-18/body.html
@@ -1,30 +1,26 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p> <h3> Traffic Signs</h3><p>
-    <p><h4>The color and shape of a traffic sign</h4> communicates
-    important information about the sign’s message. In poor
-    visibility conditions, such as heavy fog, you may be able to
-    make out only the shape of a sign. As you approach a sign
-    and while still distant, you may see the color long before you
-    can read the message or see the symbol, giving you some
-    advance information.</p>
-    <p><b>Sign Colors</b>
-      <br>
-      Sign colors help you know what the intention of the sign is.</p>
-    <p>Red used with white conveys stop, yield, do not, and no. Stop
-      signs, yield signs, do not enter or wrong way signs, the circle
-      and slash in a no turn sign, and the restrictions in a parking sign
-      are examples.</p>
-    <p>
-    Black used with white conveys regulatory information. Speed
-    limit, do not pass, no turns are examples where the operation is
-    regulated by law and the black and white sign would be found.
-    </p>
-    <p>
-    Yellow used with black conveys a warning. Curve ahead,
-    stop ahead, overhead clearances, slippery when wet, are all
-    examples. A specialized class of warning signs uses a strong
-    yellow/green color with black to advise of school zone activities
-    and other pedestrian activities.</p>
+    <p> <b> Red arrow: </b> <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_arrow_on.jpg" alt="Red Arrow On" style="width:100px;height:100px;">
+      A red arrow means you must stop if you intend to
+move in the direction of the arrow. You may not
+proceed in the direction of the arrow as long
+as the red arrow is displayed, unless signs are
+posted at the intersection that read “Right on
+Red Arrow After Stop” or “Left on Red Arrow
+After Stop.” Virginia law prohibits right and left
+turns at red arrow lights.
+    <br> Note: If you are traveling in another state, make sure you know
+its laws for right and left turns at red and red arrow lights. </p>
+    <p> <b> Flashing red light: </b> <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_light_flashing.jpg" alt="Red Light Flashing" style="width:100px;height:100px;">
+      At a flashing red light, come
+to a complete stop and yield to oncoming
+vehicles and pedestrians. You may go when the
+way is clear. At a railroad crossing, you must
+come to a complete stop even if you don’t see a
+train. </p>
+    <p> <b>Flashing red arrow: </b> At a flashing red arrow, come to a
+    complete stop, yield the right-of-way to vehicles coming from
+    the other direction and pedestrians in the intersection, and
+    proceed in the direction of the arrow when the way is clear.</p>
   </div>
 </div>
