--- a/manuscript/page-20/body.html
+++ b/manuscript/page-20/body.html
@@ -1,51 +1,29 @@
 <div class="leaf flex">
   <div class="inner justify ">
+    <p>
+    <b> Green light or arrow: </b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/green_light_on.jpg" alt="Green Light On" style="width:100px;height:100px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/green_arrow_on.jpg" alt="Green Arrow On" style="width:100px;height:100px;">
+    At a green light, you may go if the way
+is clear. At a green arrow, you may go in the direction of the
+arrow if the way is clear. If you are turning, you must yield the
+right-of-way to vehicles coming from the other direction and
+pedestrians in the intersection. Be sure to check for less visible
+vehicles such as motorcycles,
+bicycles, and mopeds. If a traffic
+light changes from red to green
+while a pedestrian is in the street,
+allow the pedestrian to cross the
+street before turning.</p>
+    <p><b>Out of service signals: </b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/signals_out_of_service.jpg" alt="Signals Out Of Service" style="width:150px;height:120px">
+    When traffic signals are not working
+because of a power outage or other problem and not displaying
+any lights, you are required to stop, proceeding through the
+intersection as though it were an all-way stop. This does not
+apply if a law enforcement officer or other authorized person is
+directing traffic at the intersection, or if portable stop signs are
+in use.</p>
 
-    <p><h4>Sign Shapes</h4> </p>
-    <p><b>Octagon (Stop):</b> This eight-sided
-shape always means stop.
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/stop_sign.jpg" alt="Stop Sign" style="width:100px;height:100px;">
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/octagon_sign.jpg" alt="Octagon Sign" style="width:100px;height:100px;">
-    You must
-come to a complete stop at the
-sign, stop line, pedestrian crosswalk
-or curb. Wait for any vehicle or
-pedestrian to clear the way. At some intersections you’ll find
-a sign beneath the stop sign that reads “All Way” or “4 Way.”
-At these intersections all vehicles on all roads leading into the
-intersection must stop. If you get to the intersection at the
-same time as other vehicles, the driver on the left must yield
-to the driver on the right.</p>
-    <p><b>Triangle (Yield):</b> You must
-slow down as you come to the
-intersection.
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yield_sign.jpg" alt="Yield Sign" style="width:100px;height:100px;">
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/triangle_sign.jpg" alt="Triangle Sign" style="width:100px;height:100px;">
-    Be prepared to stop.
-Let any vehicles, pedestrians or
-bicyclists safely pass before you
-proceed.</p>
-    <p><b>Rectangle (Regulatory or Guide):</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/rectangle_sign_1.jpg" alt="Rectangle Sign 1" style="width:100px;height:100px;">
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/rectangle_sign_2.jpg" alt="Rectangle Sign 2" style="width:100px;height:100px;">
-    Vertical signs generally give
-  instructions or tell you the law.
-  Horizontal signs may give directions
-  or information.</p>
-    <p><b>Diamond (Warning):</b> These signs warn you
-of special conditions or hazards ahead.
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/warning_sign.jpg" alt="Warning Sign" style="width:100px;height:100px;">
-    Slow down and drive with caution. Be ready to stop.</p>
-    <p><b>Pentagon (School Zone/School
-Crossing):</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/school_sign_1.jpg" alt="School Sign 1" style="width:100px;height:100px;">
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/school_sign_2.jpg" alt="School Sign 2" style="width:100px;height:100px;">
-    This five-sided shape marks
-school zones and warns you
-about school crossings. Signs
-may display horizontal lines
-indicating the point at which a
-crosswalk exists. Two signs may be used together
-to show the actual location of the crosswalk.</p>
   </div>
 </div>
