--- a/manuscript/page-22/body.html
+++ b/manuscript/page-22/body.html
@@ -1,6 +1,30 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Emergency Vehicles </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+    <p> <h3> Traffic Signs</h3><p>
+    <p><h4>The color and shape of a traffic sign</h4> communicates
+    important information about the sign’s message. In poor
+    visibility conditions, such as heavy fog, you may be able to
+    make out only the shape of a sign. As you approach a sign
+    and while still distant, you may see the color long before you
+    can read the message or see the symbol, giving you some
+    advance information.</p>
+    <p><b>Sign Colors</b>
+      <br>
+      Sign colors help you know what the intention of the sign is.</p>
+    <p>Red used with white conveys stop, yield, do not, and no. Stop
+      signs, yield signs, do not enter or wrong way signs, the circle
+      and slash in a no turn sign, and the restrictions in a parking sign
+      are examples.</p>
+    <p>
+    Black used with white conveys regulatory information. Speed
+    limit, do not pass, no turns are examples where the operation is
+    regulated by law and the black and white sign would be found.
+    </p>
+    <p>
+    Yellow used with black conveys a warning. Curve ahead,
+    stop ahead, overhead clearances, slippery when wet, are all
+    examples. A specialized class of warning signs uses a strong
+    yellow/green color with black to advise of school zone activities
+    and other pedestrian activities.</p>
   </div>
 </div>
