--- a/manuscript/page-23/body.html
+++ b/manuscript/page-23/body.html
@@ -1,6 +1,28 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Snow/Following Distance/Hazardous Conditions </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+
+    <p><b>No Left Turn:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_left_turn.jpg" alt="No Left Turn Sign" style="width:50px;height:50px;">
+    Left turns are against the law. In
+Virginia, U-turns are considered as two left turns
+and are illegal if this sign is posted.</p>
+    <p><b>No Right Turn:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_right_turn.jpg" alt="No Right Turn Sign" style="width:50px;height:50px;">
+    Right turns are illegal. Do not
+make a right turn when you see this sign.</p>
+    <p><b>No U-Turn:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_u_turn.jpg" alt="No U Turn Sign" style="width:50px;height:50px;">
+    U-turns are illegal. Do not make a
+   U-turn when you see this sign.</p>
+    <p><b>No Turn on Red:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_turn_on_red.jpg" alt="No Turn on Red Sign" style="width:50px;height:50px;">
+    You may not turn on the red
+   light. Wait for the signal to turn green.</p>
+    <p><b>Do Not Pass: </b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/do_not_pass.jpg" alt="Do Not Pass" style="width:50px;height:50px;">
+      This sign marks the beginning of
+      a no passing zone. You may not pass cars ahead
+      of you in your lane, even if the way is clear.</p>
+
   </div>
 </div>
