--- a/manuscript/page-24/body.html
+++ b/manuscript/page-24/body.html
@@ -1,6 +1,43 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Backing/Parking/Lights </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+
+    <p><b>Left Turn Yield on Green:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/left_turn_green_yield.jpg" alt="Left Turn Yield on Green" style="width:50px;height:50px;">
+      This sign is used with
+a traffic signal.
+      It tells you that the traffic turning
+left at a green light does not have the right-ofway
+and must yield to traffic coming from the
+other direction. Stop and look for oncoming
+traffic, then proceed with caution.</p>
+
+    <p><b>Keep Right:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/keep_right.jpg" alt="Keep Right" style="width:50px;height:50px;">
+      A traffic island, median or barrier is
+ahead. Keep to the side indicated by the arrow.<p>
+
+    <p><b>Lane Use Control:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/lane_use_ctrl_1.jpg" alt="Lane Use Control 1" style="width:50px;height:50px;">
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/lane_use_ctrl_2.jpg" alt="Lane Use Control 2" style="width:50px;height:50px;">
+      These signs are
+used where turns are required or
+where special turning movements
+are permitted for specific lanes.
+Traffic in the lane must turn in the
+direction of the arrow.</p>
+
+    <p><b>High Occupancy Vehicle:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/hov.jpg" alt="HOV" style="width:50px;height:50px;">
+      These signs indicate
+lanes reserved for buses and vehicles with a
+driver and one or more passengers as specified
+on the sign.</p>
+
+    <p><b>Disabled Parking:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/disable_parking.jpg" alt="Disabled Parking" style="width:50px;height:50px;">
+      Parking spaces marked with
+these signs are reserved for people with disabled
+parking permits.</p>
+
   </div>
 </div>
