--- a/manuscript/page-25/body.html
+++ b/manuscript/page-25/body.html
@@ -1,6 +1,34 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Motorcycles/Bi-Cycles/Pedestrians </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+    <p>Warning signs alert you to possible hazards ahead. Slow
+    down and watch for other signs or signals that may follow.</p>
+
+    <p><b>Advisory Speed:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/exit_speed.jpg" alt="exit_speed" style="width:50px;height:50px;">
+      This sign indicates the
+    maximum safe speed for a highway exit.
+    Reduced Speed Limit Ahead: Prepare
+    to reduce your speed; the speed limit is
+    changing ahead.</p>
+
+    <p><b>Signal Ahead:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/traffic_signals.jpg" alt="No Right Turn Sign" style="width:50px;height:50px;">
+      Traffic signals are ahead. Slow
+    down and be ready to stop.</p>
+
+    <p><b>No Passing Zone:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_passing_zone.jpg" alt="No Passing Zone" style="width:50px;height:50px;">
+      This sign marks the
+beginning of a no passing zone. You may not
+pass cars ahead of you in your lane, even if the
+way is clear.
+
+    <p><b>Merge:</b>
+        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/lane_merge.jpg" alt="Lane Merge" style="width:50px;height:50px;">
+        Two lanes of traffic moving in the same
+direction are about to become one. Drivers in
+both lanes are responsible for merging safely.</p>
+
+
   </div>
 </div>
