--- a/manuscript/page-27/body.html
+++ b/manuscript/page-27/body.html
@@ -1,6 +1,26 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Hello world! </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+    <p><b>Slippery When Wet:</b>
+        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/slippery_when_wet.jpg" alt="Slippery When Wet" style="width:50px;height:50px;">
+        When pavement is wet,
+reduce your speed. Do not brake hard or
+change direction suddenly. Increase the distance
+between your car and the one ahead of you.
+
+    <p><b>Low Clearance Sign:</b>
+       <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/low_clearance_sign.jpg" alt="Low Clearance Sign" style="width:50px;height:50px;">
+       The overpass ahead has a
+low clearance. Do not proceed if your vehicle is
+taller than the height shown on the sign.</p>
+
+    <p><b>Hill:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/hill.jpg" alt="Hill Sign" style="width:50px;height:50px;">
+      A steep grade is ahead. Check your
+brakes.</p>
+
+    <p><b>Deer Crossing:</b>
+        <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/deer_crossing.jpg" alt="Deer Crossing" style="width:50px;height:50px;">
+        Deer cross the roadway in this
+area. Slow down, be alert and be ready to stop.</p>
   </div>
 </div>
