--- a/manuscript/page-13/body.html
+++ b/manuscript/page-13/body.html
@@ -1,23 +1,7 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p> <b> Right turn on red: </b>
-    You may turn right while the traffic signal
-displays a red light. Before turning, you must come to a
-complete stop. Look both ways and yield the right-of-way to
-pedestrians and other traffic. Be sure to check for less visible
-vehicles such as motorcycles, bicycles and mopeds. <b>You may
-not turn</b> right on red if signs are posted at the intersection that
-read “No Turn on Red,” or if a red arrow pointing to the right is
-displayed. </p>
-    <p><b> Left turn on red: </b>
-    You may turn left at a red light if you are on
-a one-way street and turning left onto another one-way street
-while the traffic signal displays a red light. Before turning, you
-must come to a complete stop. Look both ways and yield the
-right-of-way to pedestrians and other traffic. Be sure to check
-for less visible vehicles such as motorcycles, bicycles, and
-mopeds. <b> You may not turn left </b> on red if signs are posted at
-the intersection that read “No Turn on Red,” or if a red arrow
-pointing to the left is displayed. </p>
+    <h1> Preface </h1>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/traffic_light.gif" alt="Traffic Light" style="width:200px;height:250px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/reserved_parking.png" alt="Traffic Light" style="width:200px;height:250px;">
   </div>
 </div>
