--- a/manuscript/page-14/body.html
+++ b/manuscript/page-14/body.html
@@ -1,26 +1,21 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p> <b> Red arrow: </b> <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_arrow_on.jpg" alt="Red Arrow On" style="width:100px;height:100px;">
-      A red arrow means you must stop if you intend to
-move in the direction of the arrow. You may not
-proceed in the direction of the arrow as long
-as the red arrow is displayed, unless signs are
-posted at the intersection that read “Right on
-Red Arrow After Stop” or “Left on Red Arrow
-After Stop.” Virginia law prohibits right and left
-turns at red arrow lights.
-    <br> Note: If you are traveling in another state, make sure you know
-its laws for right and left turns at red and red arrow lights. </p>
-    <p> <b> Flashing red light: </b> <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_light_flashing.jpg" alt="Red Light Flashing" style="width:100px;height:100px;">
-      At a flashing red light, come
-to a complete stop and yield to oncoming
-vehicles and pedestrians. You may go when the
-way is clear. At a railroad crossing, you must
-come to a complete stop even if you don’t see a
-train. </p>
-    <p> <b>Flashing red arrow: </b> At a flashing red arrow, come to a
-    complete stop, yield the right-of-way to vehicles coming from
-    the other direction and pedestrians in the intersection, and
-    proceed in the direction of the arrow when the way is clear.</p>
+    <h1> Traffic Signals </h1>
+
+    <p> Traffic signals, signs and pavement markings are used for traffic control to provide a smooth, orderly flow of traffic. It is
+important to understand and obey them. It is illegal to avoid these traffic controls by cutting through a parking lot or field. </p>
+    <p> Obey all signs and signals unless directed by a police officer;
+always follow the officer’s direction. </p>
+    <h3> Traffic Signals </h3>
+    <p> Traffic signals apply to drivers, motorcycle riders, bicyclists,
+moped-riders and pedestrians.</p>
+    <p><b> Red Light: </b>
+
+    At a red light, <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_light_on.jpg" alt="Red Light On" style="width:100px;height:100px;">
+    <br>come to a complete stop
+at the stop line or, if there is no stop line, before
+entering the intersection or before reaching the
+crosswalk. Remain stopped as long as the signal is
+red, unless turns are allowed.</p>
   </div>
 </div>
