--- a/manuscript/page-19/body.html
+++ b/manuscript/page-19/body.html
@@ -1,16 +1,33 @@
 <div class="leaf flex">
   <div class="inner justify ">
+    <p>
+    <b> Yellow light or arrow: </b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_light_on.jpg" alt="Yellow Light On" style="width:100px;height:100px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_arrow_on.jpg" alt="Yellow Arrow On" style="width:100px;height:100px;">
+     A yellow light or arrow are cautions
+    warning that the light is about to change. If you have not
+    entered the intersection, stop;
+    or, if unsafe to stop, cautiously
+    go through it. If you are already
+    in the intersection, go through it
+    cautiously. Do not speed up to
+    beat the light.</p>
+    <p><b>Flashing yellow light:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_light_flashing.jpg" alt="Yellow Light FLashing" style="width:100px;height:100px;">
+     A flashing yellow light
+    means slow down and proceed with caution.
+    Flashing yellow lights are at locations with
+    higher-than-normal hazardous conditions.</p>
+    <p><b>Flashing yellow arrow:</b>
+     At a flashing yellow arrow, you may
+    turn in the direction of the arrow, if the way is clear. Yield
+    the right-of-way to vehicles coming from the other direction
+    and pedestrians in the intersection. Be sure to check for less
+    visible vehicles such as motorcycles, bicycles, and mopeds. If
+    a traffic light changes from red to flashing yellow arrow while a
+    pedestrian is in the intersection, allow the pedestrian to cross
+    the street before turning.
+    </p>
 
-    <p>Green and white, blue and white, and brown and white signs
-are used to provide helpful information. The green sign is used
-to provide destination types of information, while the blue sign
-is used to inform regarding motorists services. The brown sign is
-used to advise of historical or cultural interests that might exist
-in the area.</p>
-    <p>Orange and black and pink and black signs are used to
-advise and warn in construction (orange) and incident (pink)
-areas. They are used with black and white signs that convey
-regulations that might exist only because of the construction
-effort or the incident.</p>
   </div>
 </div>
