--- a/manuscript/page-21/body.html
+++ b/manuscript/page-21/body.html
@@ -1,44 +1,25 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <p><h4>Regulatory or guide signs</h4> inform you
-of the law; you must obey their instructions.
-Remember that a red circle with a slash means
-NO — the symbol inside the circle tells you
-what is prohibited.
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_circle_sign.jpg" alt="No Circle Sign" style="width:100px;height:100px;">
-    </p>
-    <p><b>Speed Limit: </b> These signs tell you the maximum
-legal speed that you may drive on the road
-where the sign is posted when weather
-conditions are good.
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/speed_limit.jpg" alt="Speed Limit Sign" style="width:100px;height:100px;">
-    During rain, snow and ice,
-you may receive a ticket for driving too fast for
-the conditions even if you are driving at or less
-than the posted speed limit.</p>
-    <p><b>Do Not Enter – Wrong Way:</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/do_not_enter_sign.jpg" alt="Do Not Enter Sign" style="width:100px;height:100px;">
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/wrong_way.jpg" alt="Wrong Way Sign" style="width:100px;height:100px;">
-    These signs mean
-you cannot drive in that direction. If you drive
-past these signs you are going in the wrong
-direction and could get into a head-on crash
-with vehicles headed your way. Cautiously turn
-around.</p>
-    <p><b>One Way:</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/one_way_sign_1.jpg" alt="One Way Sign 1" style="width:100px;height:100px;">
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/one_way_sign_2.jpg" alt="One Way Sign 2" style="width:100px;height:100px;">
-    Traffic flows only in
-the direction of the arrow.</p>
-    <p><b>No Left Turn:</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_left_turn.jpg" alt="No Left Turn Sign" style="width:100px;height:100px;">
-    Left turns are against the law. In
-Virginia, U-turns are considered as two left turns
-and are illegal if this sign is posted.</p>
-    <p><b>No Right Turn:</b>
-    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/no_right_turn.jpg" alt="No Right Turn Sign" style="width:100px;height:100px;">
-    Right turns are illegal. Do not
-make a right turn when you see this sign.</p>
+    <p> <h4> Lane use signals</h4>indicate lanes where you can and
+cannot drive during different hours of the day.</p>
+    <p><b>Red X:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/red_cross_on.jpg" alt="Red X" style="width:100px;height:100px;">
+      Never drive in a lane marked with
+a red X signal.</p>
+    <p><b>Yellow X or Yellow Diagonal Downward Arrow:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_cross_on.jpg" alt="Yellow X" style="width:100px;height:100px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/yellow_down_arrow.jpg" alt="Yellow Downward Arrow" style="width:100px;height:100px;">
+      These signals
+mean that you should move out
+of the lane as soon as safely
+possible.</p>
+    <p><b>Left-turn Arrow:</b>
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/one_way_arrow.jpg" alt="One Way Arrow" style="width:100px;height:100px;">
+    <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/two_way_arrow.jpg" alt="Two Way Arrow" style="width:100px;height:100px;">
+      You are permitted
+to enter in a lane marked with a
+one-way or two-way arrow only to
+turn in the direction of the arrow.</p>
 
   </div>
 </div>
