--- a/manuscript/page-26/body.html
+++ b/manuscript/page-26/body.html
@@ -1,6 +1,34 @@
 <div class="leaf flex">
   <div class="inner justify ">
-    <h1> Drinking & Driving/Penalty </h1>
-    <p> Lorem ipsum dolor sit amet, <a href="https://wikipedia.com">consectetur</a> adipiscing elite... </p>
+
+    <p><b>Lane Reduction:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/lane_reduction.jpg" alt="Lane Reduction" style="width:50px;height:50px;">
+      The right lane ends soon.
+    Drivers in the right lane must merge left when
+    space opens up. Drivers in the left lane should
+    allow other vehicles to merge smoothly.</p>
+
+    <p><b>Divided Highway Begins:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/divided_highway_begins.jpg" alt="Divided Highway Begins" style="width:50px;height:50px;">
+      The highway ahead
+    is split into two separate roadways by a median
+    or divider and each roadway is one-way. Keep
+    right.</p>
+
+    <p><b>Divided Highway Ends:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/divided_highway_ends.jpg" alt="Divided Highway Ends" style="width:50px;height:50px;">
+      The highway ahead no
+    longer has a median or divider. Traffic goes in
+    both directions. Keep right.</p>
+
+    <p><b>Roundabout:</b>
+      <img src="https://raw.githubusercontent.com/kamkisho/DMV-DL-Guide/master/assets/images/roundabout.jpg" alt="Roundabout Sign" style="width:50px;height:50px;">
+      These signs indicate a circular
+    intersection with an island in the center is
+    ahead. Also called rotaries or traffic circles,
+    these intersections may have one or more lanes.
+    Entering traffic must yield the right-of-way to
+    traffic already in the circle.</p>
+
   </div>
 </div>
